kubernetes/services/pterodactyl/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pterodactyl-cache
spec:
  selector: 
    matchLabels:
      app: pterodactyl-cache
  replicas: 1
  template:
    metadata:
      labels:
        app: pterodactyl-cache
    spec:
      containers:
      - image: redis:alpine
        name: pterodactyl-cache
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pterodactyl-db
spec:
  selector: 
    matchLabels:
      app: pterodactyl-db
  replicas: 1
  template:
    metadata:
      labels:
        app: pterodactyl-db
    spec:
      containers:
      - name: pterodactyl-db
        image: mariadb:latest
        args:
          - --default-authentication-plugin=mysql_native_password
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: pterodactyl-database
      volumes:
      - name: pterodactyl-database
        persistentVolumeClaim:
          claimName: pterodactyl-database
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pterodactyl
spec:
  selector:
    matchLabels:
      app: pterodactyl
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pterodactyl
      annotations:
        deploy-date: "deploy-date-value"
    spec:
      containers:
      - name: pterodactyl
        image: ghcr.io/pterodactyl/panel:latest
        ports: 
          - containerPort: 80
            protocol: TCP
          - containerPort: 443
            protocol: TCP
        volumeMounts:
        - mountPath: /app/var/
          name: pterodactyl-panel
          subPath: var
        - mountPath: /etc/nginx/http.d/
          name: pterodactyl-panel
          subPath: nginx
        - mountPath: /etc/letsencrypt/
          name: pterodactyl-panel
          subPath: letsencrypt
        - mountPath: /app/storage/logs
          name: pterodactyl-panel
          subPath: logs
      volumes:
      - name: pterodactyl-panel
        persistentVolumeClaim:
          claimName: pterodactyl-panel
