kubernetes/services/pterodactyl/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pterodactyl
spec:
  selector:
    app: pterodactyl
  ports:
    - protocol: TCP
      port: 80
      containerPort: 80
