kubernetes/services/pterodactyl/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pterodactyl-ingressroute
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`pterodactyl.eggenberg.io`)
    kind: Rule
    services:
    - name: pterodactyl
      port: 80
  tls:
    secretName: pterodactyl-certificate-secret
